memory-limit.yml
apiVersion: v1
kind: Pod
metadata:
  name: memory-limit
spec:
  containers:
  - name: memory-limit
    image: registry.takima.io/school/proxy/memory-stress
    resources:
      requests:
        memory: "250Mi"
        cpu: "0.5"
      limits:
        memory: "500Mi"
        cpu: "1"
    command: ["stress"]
    args: ["--vm", "1", "--vm-bytes", "250M", "--vm-hang", "1"]
