mynginx.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: mynginx
  name: mynginx
spec:
  automountServiceAccountToken: false
  containers:
  - image: registry.takima.io/school/proxy/nginx:1.25.1
    name: mynginx
    resources: 
      requests:
        cpu: 100m
        memory: 100M
        ephemeral-storage: 100Mi
      limits:
        cpu: 200m
        memory: 256M
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
