unicorn-front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unicorn-front-deployment
  labels:
    app: unicorn-front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: unicorn-front
  template:
    metadata:
      labels:
        app: unicorn-front
    spec:
      containers:
      - name: unicorn-front
        image: registry.gitlab.com/takima-school/images/simple-website:latest
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: takima-school-registry
